# StarryOS

./: -remote atomgit  .gitignore  Cargo.toml  DEPLOYMENT-GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  README_updated_backup.md  StarryOS-部署方案.md  architecture.md  async_runtime.rs  build.rs  debug-guide.md  deploy-config.toml  dma.rs  github-mcp-guide.md  gpio.rs  h atomgit main  i2c.rs  lib.rs  manager.rs  mipi_csi.rs  rk3588_drivers.rs  spi.rs  uart.rs  usb.rs  复现指南.md  复现指导文档.md  技术报告.md
.codebuddy/: pdc.json
.codebuddy/sandbox/: sandbox.json
.github/: CODE_OF_CONDUCT.md  mcp-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai/: Cargo.toml
ai/src/: lib.rs  rk3588_npu.rs  yolo_v8.rs
ai/src/npu/: mod.rs  rockchip_rk3588.rs
ai/src/speech/: mod.rs  natural_language.rs  speech_recognition.rs  text_to_speech.rs
ai/src/yolo_v8/: mod.rs  optimized.rs
api-server/: package.json  server.js
apps/: Cargo.toml
apps/src/: lib.rs  main.rs  multimodal_fusion.rs  system_integration.rs  voice_interaction.rs
apps/src/object_detection/: mod.rs
common/: Cargo.toml  README.md
common/src/: data_structures.rs  error.rs  lib.rs  performance.rs  utils.rs
common/tests/: common_tests.rs
docs/: debug-guide.md  github-mcp-guide.md  复现指南.md
docs/design/: architecture.md
drivers/: Cargo.toml
drivers/src/: async_runtime.rs  dma.rs  lib.rs  manager.rs  mipi_csi.rs  rk3588_drivers.rs  usb.rs
drivers/src/audio/: codec.rs  microphone.rs  mod.rs  speaker.rs
drivers/src/auxiliary/: mod.rs  oled_ssd1306.rs
drivers/src/communication/: can.rs  mod.rs  wifi_esp32.rs
drivers/src/environmental/: dht22.rs  mod.rs
drivers/src/npu/: mod.rs
kernel/: Cargo.toml
kernel/src/: lib.rs  panic.rs  rk3588.rs
kernel/src/cpu/: mod.rs  rk3588.rs
kernel/src/gic/: mod.rs
kernel/src/memory/: dynamic_memory.rs  heap.rs  mod.rs
kernel/src/mmu/: mod.rs
kernel/src/scheduler/: mod.rs
llm/DeepSeek-R1/: README.md  convert.py  gradio_server.py  llm_demo.cpp
scripts/: automated-testing.sh  debug-setup.sh  deploy-full.sh  deploy-rk3588.sh  deploy-voice-ai.sh  deploy.sh  github-mcp-demo.sh  performance-optimizer.sh  portability-validator.sh  real-time-monitor.sh  smart-diagnosis.sh  system-integration.sh  verify-deployment.sh
tests/: Cargo.toml
tests/benches/: ai_bench.rs
tests/src/: automated_tests.rs  lib.rs
tests/src/integration/: rk3588_validation.rs
web-demo/: README.md  app.js  index.html  package-lock.json  package.json  vite.config.js
web-demo/api-server/: server.js
yolo11/python/: README.md  func_multithread.py  main_video_multithread.py
