[package]
name = "common"
version = "0.1.0"
description = "StarryOS通用共享库"
authors = ["StarryOS Team"]

[lib]
path = "src/lib.rs"

[dependencies]
alloc = { package = "rustc-std-workspace-alloc", version = "1.0.0", optional = true }
core = { package = "rustc-std-workspace-core", version = "1.0.0" }

[features]
default = []
alloc-support = ["alloc"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"