[package]
name = "starry-drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心依赖
starry-kernel = { path = "../kernel" }
embedded-hal = { workspace = true }
nb = { workspace = true }

# I2C/SPI通信
embedded-hal-bus = "0.1"

# 传感器驱动
dht-sensor = "0.4"
bh1750 = "0.2"
mpu6050 = "0.4"

# 显示驱动
ssd1306 = "0.8"

# 通信驱动
bluer = "0.14"  # 蓝牙
common = { path = "../common", features = ["alloc-support"] }

[dev-dependencies]

[features]
default = ["environmental", "communication", "auxiliary", "npu"]
environmental = []
communication = []
auxiliary = []
npu = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"