[package]
name = "starry-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# 核心依赖
cortex-a = { workspace = true }
bare-metal = { workspace = true }
bitflags = { workspace = true }

# 嵌入式HAL
embedded-hal = { workspace = true }
nb = { workspace = true }

# 内存管理
buddy_system_allocator = "0.9"

# 日志系统
log = "0.4"
uart_16550 = "0.2"

# 工具库
spin = "0.9"

[features]
default = []
qemu = []
orangepi-aipro = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1