[package]
name = "starry-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心依赖
starry-kernel = { path = "../kernel" }
starry-drivers = { path = "../drivers" }
starry-ai = { path = "../ai" }
starry-apps = { path = "../apps" }

# 测试框架
criterion = { workspace = true }

[dev-dependencies]

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "scheduler_bench"
harness = false

[[bench]]
name = "ai_bench"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"